--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,1 +1,20 @@
-{{outlet}}
+
+<div class="section">
+  <div class="container is-fluid">
+      <figure class="media media-content">
+        <div class="message">
+      <div class="message-header">Welcome to Razer Cars!</div>
+    </div>
+      <div class="message-body">
+        <p class="title">Are you ready to drive?</p>
+        <p>You can choose to see all provided car manufacturers or you can back out.
+          Are you ready to take a seat? Fantastic. We'll take it from here.
+          Thank you for choosing Razer Cars: Your one stop shop for all your car stats needs.</p>
+          <div class="index-man-btn">
+        <a href="/manufacturers" class="btn">
+          See All Manufacturers</a>
+      </div>
+      </div>
+    </figure>
+  </div>
+</div>
