--- a/app/manufacturers/template.hbs
+++ b/app/manufacturers/template.hbs
@@ -2,7 +2,9 @@
   <div class="container is-fluid">
       <figure class="media media-content">
         <div class="message">
-      <div class="message-header">Manufacturers</div>
+          <div class="transbox">
+      <div class="header">Manufacturers</div>
+    </div>
     </div>
       <div class="message-body">
     <table class="table">
