--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -9,8 +9,8 @@
           <a href="/" class="nav-item is-danger is-hovered">
             {{#link-to "index"}}Home{{/link-to}}</a>
 
-          <a href="/manufacturers" class="nav-item is-danger is-hovered">All Manufacturers</a>
-          <a href="/manufacturers-new" class="nav-item is-danger is-hovered">Add Manufacturers</a>
+          <a href="manufacturers" class="nav-item is-danger is-hovered">All Manufacturers</a>
+          <a href="manufacturers/new" class="nav-item is-danger is-hovered">Add Manufacturers</a>
 
         </div>
       </nav>
