--- a/app/manufacturer/new/template.hbs
+++ b/app/manufacturer/new/template.hbs
@@ -6,13 +6,15 @@
       <form class="message-body" {{action "save" on="submit"}}>
           <div class="message-inputs">
         <div class="control">
-          <input type="text" placeholder="brandMake"
-          value=formValues.brandMake>
+          {{!-- <input type="text" placeholder="Name"
+          value=formValues.brandMake> --}}
+          {{input type="name" value=formValues.name placeholder="Name"}}
         </div>
 
         <div class="control">
-          <input type="text" placeholder="brandCountry"
-          value=formValues.brandCountry>
+          {{!-- <input type="text" placeholder="Country"
+          value=formValues.brandCountry> --}}
+          {{input type="country" value=formValues.country placeholder="Country"}}
         </div>
 
       </div>
@@ -20,7 +22,7 @@
         <div class="new-submit-btns">
           <button type="button" class="back" name="button">Back</button>
 
-          <button type="button" value="button" class="new-submit" name="new-submit">Submit</button>
+          <button type="submit" value="button" class="new-submit" name="new-submit">Submit</button>
         </div>
 
       </form>
